# obs-sftp-file-processor-python

./: .dockerignore  .gitignore  API_ENDPOINTS_COMPARISON.md  API_EXAMPLES.md  API_KEY_AUTHENTICATION_PLAN.md  AZURE_DEPLOYMENT.md  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  DOCKERFILE_ADD_ORACLE_PLAN.md  DOCKERFILE_ORACLE_INSTALL_PLAN.md  DOCKER_ORACLE_SETUP.md  Dockerfile  FIX_AUTH_ISSUE.md  FRONTEND-PLAN.md  FTP_PROCESS.md  IMPLEMENTATION_API_USERS_AUDIT_FIELDS.md  JWT_AUTHENTICATION_PLAN.md  LICENSE  NEXTJS_ORACLE_AUTH_PLAN.md  ORACLE_INSTANT_CLIENT_SETUP.md  ORACLE_INTEGRATION_SUMMARY.md  ORACLE_SETUP.md  ORA_04036_FIX.md  PLAN_ACH_ACCOUNT_SWAPS_INSERT.md  PLAN_ACH_FILE_LINES_USAGE.md  PLAN_ACH_STORED_PROC_WITH_SPANISH.md  PLAN_API_USERS_AUDIT_FIELDS.md  PLAN_MOVE_ORACLE_TO_OPT.md  PLAN_ORACLE_TABLES_LIST.md  PLAN_PASSWORD_AUTHENTICATION.md  PLAN_SWAPS_IMPLEMENTATION.md  PORTAINER1-INSTALL-HERE-BEST_VERSION.md  PORTAINER_CODE_UPDATE_PLAN.md  PORTAINER_DEPLOYMENT.md  PORTAINER_DEPLOYMENT_INSTRUCTIONS.md  PORTAINER_FIX_BUILD_ERROR.md  PORTAINER_GIT_ERROR_FIX.md  PORTAINER_IMAGE_BUILD_COMPLETE.md  PORTAINER_NEW_BUILD_TROUBLESHOOTING.md  (+44 more)
Tasks/: Task-000001-DB.md  Task-000001-FASTAPI  Task-000002-DB.md  Task-000002-SFTP  Task-000004-DockerPortainer  Task-000005-build-portainer  Task-000006-Users  Task-000007  Task-000008-AUTH  Task-000009-Add-User-To-Update  Task-000010-Add-Status-Change-ACH-Files  Task-000011-Build-Remote-Portainer-File-Image  Task-000012-Watertown-File-Format  Task-000013-Add-to-ACH-FILES  Task-000014-Update-Memo  Task-000018-Holidays  Tasks-000017-SWAPS  (+4 more)
(+43 files in other folders)
